--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,10 @@
 [versions]
-agp = "8.13.1"
+agp = "8.13.2"
 coilComposeVersion = "2.7.0"
 converterGson = "3.0.0"
+glanceAppwidgetPreview = "1.1.1"
 gson = "2.13.2"
-kotlin = "2.2.21"
+kotlin = "2.3.0"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
@@ -11,9 +12,8 @@ espressoCore = "3.7.0"
 kotlinxCoroutinesTest = "1.10.2"
 kotlinxSerializationJson = "1.9.0"
 lifecycleRuntimeKtx = "2.10.0"
-activityCompose = "1.12.0"
-composeBom = "2025.11.01"
-navigationCompose = "2.9.6"
+activityCompose = "1.12.2"
+composeBom = "2025.12.01"
 retrofit2KotlinxSerializationConverter = "1.0.0"
 retrofit = "3.0.0"
 glanceAppwidget = "1.1.1"
@@ -21,9 +21,11 @@ glanceAppwidget = "1.1.1"
 nav3Core = "1.0.0"
 
 # If your screens depend on ViewModels, add the Nav3 Lifecycle ViewModel add-on library
-lifecycleViewmodelNav3 = "2.10.0-rc01"
+lifecycleViewmodelNav3 = "2.10.0"
+glancePreview = "1.1.1"
 
 [libraries]
+androidx-glance-appwidget-preview = { module = "androidx.glance:glance-appwidget-preview", version.ref = "glanceAppwidgetPreview" }
 material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleRuntimeKtx" }
@@ -53,6 +55,7 @@ androidx-navigation3-runtime = { module = "androidx.navigation3:navigation3-runt
 androidx-navigation3-ui = { module = "androidx.navigation3:navigation3-ui", version.ref = "nav3Core" }
 
 androidx-lifecycle-viewmodel-navigation3 = { module = "androidx.lifecycle:lifecycle-viewmodel-navigation3", version.ref = "lifecycleViewmodelNav3" }
+androidx-glance-preview = { group = "androidx.glance", name = "glance-preview", version.ref = "glancePreview" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
